feat: add another ingredient in the test